removed outline option from image tag input and also fixed the padding so that the text could be aligned with the tweet prompt

--- a/src/Components/Screens/TweetBox.css
+++ b/src/Components/Screens/TweetBox.css
@@ -43,5 +43,6 @@
 
 .tweetBox-inputImage {
   border: none;
-  padding: 10px;
+  padding-bottom: 10px;
+  outline: none;
 }
